PR/44063: Aleksey Cheusov: awk: setting NF doesn't change $i http://www.opengroup.org/onlinepubs/009695399/utilities/awk.html

...
    References to nonexistent fields (that is, fields after $NF),
    shall evaluate to the uninitialized value.